<resources>
    <string name="app_name">GalleryMuslim</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FirstNameTextField">Enter First Name</string>
    <string name="LastNameTextField">Enter Last Name</string>
    <string name="Username">Enter Email</string>
    <string name="RegisterButton">Register</string>
    <string name="List_of_Users_text">List Of Registered Users</string>
    <string name="PasswordTextFiels">Enter Password</string>
    <string name="UsernameTextField">Enter User Name</string>
    <string name="backButton">Back</string>
    <string name="Login_button">Login</string>
    <string name="signupText">Sign Up!</string>

    <string-array name="product_colors">
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Black</item>
        <item>White</item>
    </string-array>
    <string name="signUpBuyyer">Sign Up Buyyer</string>
    <string name="signUpSeller">Sign Up Seller</string>
</resources>