<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.gallerymuslim.presentation.register.RegisterFragment">

    <data>

        <variable
            name="myViewModel"
            type="com.example.gallerymuslim.presentation.register.RegisterVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login"
        android:padding="40dp">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtFirstName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/custom_edit_text"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:text="@={myViewModel.inputFirstName}"
            android:hint="@string/FirstNameTextField"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <EditText
            android:id="@+id/edtLastName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_edit_text"
            android:drawableStart="@drawable/custom_password_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:text="@={myViewModel.inputLastName}"
            android:hint="@string/LastNameTextField"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtFirstName" />

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/custom_edit_text"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/Username"
            android:text="@={myViewModel.inputUsername}"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtLastName" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_edit_text"
            android:drawableStart="@drawable/custom_password_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/PasswordTextFiels"
            android:text="@={myViewModel.inputPassword}"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtUsername" />

        <Button
            android:id="@+id/btnRegister"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:onClick="@{()->myViewModel.sumbitButton()}"
            android:padding="8dp"
            android:text="@string/RegisterButton"
            android:theme="@style/AppTheme.Button"
            app:layout_constraintEnd_toStartOf="@id/btnLogin"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:onClick="@{()->myViewModel.sumbitButton()}"
            android:padding="8dp"
            android:text="@string/Login_button"
            android:theme="@style/AppTheme.Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toEndOf="@id/btnRegister"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>