<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.gallerymuslim.login.LoginFragment">

    <data>

        <variable
            name="myLoginViewModel"
            type="com.example.gallerymuslim.login.LoginVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="40dp">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/custom_email_icon"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/Username"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/custom_password_icon"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/PasswordTextFiels"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtUsername" />

            <Button
                android:id="@+id/submitButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:theme="@style/AppTheme.Button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:onClick="@{()->myLoginViewModel.loginButton()}"
                android:padding="8dp"
                android:text="@string/Login_button"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

            <Button
                android:id="@+id/SignUpSeller"
                style="@style/Widget.AppCompat.Button.Colored"
                android:theme="@style/AppTheme.Button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:onClick="@{()->myLoginViewModel.signUP()}"
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/signUpSeller"
                app:layout_constraintEnd_toStartOf="@id/SignUpBuyyer"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/submitButton" />

            <Button
                android:id="@+id/SignUpBuyyer"
                style="@style/Widget.AppCompat.Button.Colored"
                android:theme="@style/AppTheme.Button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:onClick="@{()->myLoginViewModel.signUP()}"
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/signUpBuyyer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toEndOf="@id/SignUpSeller"
                app:layout_constraintTop_toBottomOf="@+id/submitButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
